fixed homenav link spacing for real

--- a/css/main.css
+++ b/css/main.css
@@ -255,18 +255,6 @@ i {
 	line-height: 1;
 }
 
-#homeNav a:after{
-	content:"";
-	margin: 0 0.35em;
-}
-
-#homeNav a:last-child:after{
-	content:"";
-	margin: 0;
-	width: 0;
-	height: 0;
-}
-
 #homeNav {
 	margin: 0 auto;
 	text-align: center;
@@ -275,7 +263,7 @@ i {
 }
 
 #homeNav a {
-	padding: 0.25em;
+	padding: 0.5em;
 	color: #fff;
 	font-size: 2.25em;
 }
